--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 .DS_Store
+002_clean_architecture/resources/SwiftUI, MVVM-C, Modularisation and Dependency Injection | by Serhan Khan | Jun, 2024 | Medium.pdf
+002_clean_architecture/resources/SwiftUI, MVVM-C, Modularisation and Dependency Injection | by Serhan Khan | Jun, 2024 | Medium.webarchive
